# -Programming-Rust-O-Reilly-book-my-notes

./: README.md
code/ch02/mandelbrot-workspace/: Cargo.toml
code/ch02/mandelbrot-workspace/members/malderbrot-rayon/: Cargo.toml  README.md
code/ch02/mandelbrot-workspace/members/malderbrot-rayon/src/: main.rs
code/ch02/mandelbrot-workspace/members/mandelbrot-band/: Cargo.toml
code/ch02/mandelbrot-workspace/members/mandelbrot-lib/: Cargo.toml
code/ch02/mandelbrot-workspace/members/mandelbrot-lib/src/: lib.rs
code/ch02/mandelbrot-workspace/members/mandelbrot-lockfree/: Cargo.toml
code/ch02/mandelbrot-workspace/members/mandelbrot-lockfree/src/: main.rs
code/ch02/mandelbrot-workspace/members/mandelbrot-sigle-threaded/: Cargo.toml
code/ch02/mandelbrot-workspace/members/mandelbrot-sigle-threaded/src/: main.rs
code/ch02/mandelbrot-workspace/members/mandelbrot-task-queue/: Cargo.toml  README.md
code/ch02/mandelbrot-workspace/members/mandelbrot-thread-scope/: Cargo.toml  README copy.md  README.md
code/cheapo-request-workspace/: Cargo.toml  README.md
code/cheapo-request-workspace/members/cheapo-request-lib/: Cargo.toml
code/cheapo-request-workspace/members/cheapo-request-lib/src/: lib.rs
code/cheapo-request-workspace/members/cheapo-request-main/: Cargo.toml
code/cheapo-request-workspace/members/cheapo-request-main/src/: main.rs
code/cheapo-request-workspace/members/cheapo-request-with-shotdown-main/: Cargo.toml
code/cheapo-request-workspace/members/cheapo-request-with-shotdown-main/src/: main.rs
code/fern_sim-workspace/members/fen-sim-lib/: Cargo.toml
code/fern_sim-workspace/members/fen-sim-lib/src/: lib.rs  net.rs  simulation.rs  spores.rs
code/fern_sim-workspace/members/fen-sim-lib/tests/: unfurl.rs
(+97 files in other folders)
