[package]
name = "fen-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://fernsim.example.com/"
repository = "https://git.example.com/fernsim"
documentation = "http://fernsim.example.com/docs"
description = "Fern simulation, from the cellular level up."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
